# lin_mod

./: .gitignore  .vimrc  CMakeLists.txt  README.md  build.sh  ccc-test  echo  main.c  multiPlot_data.txt  nn.c  plot.c  stat.c  stat.h  test.c  test.txt  vector.c  vector.h
.circleci/: config.yml
lib/: array.c  array.h  matrix.c  matrix.h  plot.c  plot.h  source.c  source.h  stat.c  stat.h  styling.c  styling.h  typedef.h  utils.c  utils.h  vector.c  vector.h
lib/nn/: neural_network.c  neural_network.h
lib/numerics/: dge.c  dge.h  examples.c  examples.h
lib/stat/: finance.c  finance.h  insurance.c  insurance.h  stat.c  stat.h
tests/: test_array.h  test_dge.h  test_finance.h  test_insurance.h  test_main.c  test_matrix.h  test_neural_network.h  test_source.h  test_stat.h  test_styling.h
